--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -13,10 +13,40 @@
     <title>Error Diary</title>
 </head>
 <body>
-    <nav>
-        
-    </nav>
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+              </li>
+              {% if User %}
+              <li class="nav-item">
+                <a class="nav-link" href="">My Errors</a>
+              </li>
+              {% endif %}
+            </ul>
+          </div>
+            <div class="login navbar-collapse justify-content-end">
+                <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Log-in</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link ">Sign-Up</a>
+              </li>
+            </ul>
+            </div>
+          </div>
+        </div>
+      </nav>
+
     {% block content %}
     {% endblock %}    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
 </html>
