--- a/main_app/templates/errors/detail.html
+++ b/main_app/templates/errors/detail.html
@@ -1,13 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container d-flex flex-column align-items-center justify-content-center">
-    <div class="card justify-content-center" style="width: 85%; margin-top: 15px;">
-        <div class="card-body justify-content-center">
+<div class="container d-flex flex-column">
+    <div class="card align-items-start" style="width: 85%; margin-top: 15px;">
+        <div class="card-body">
         <h5 class="card-title">{{error.title}}</h5>
         <h6 class="card-subtitle mb-2 text-muted">{{error.language}}</h6>
         <p class="card-text">{{error.description}}</p>
-
 
         <hr>
         <form action="{% url 'add_comment' error.id %}" method="POST">
@@ -19,5 +18,16 @@
         </form>
         </div>
     </div>
+    {% for comment in error.comment_set.all %}
+    {% csrf_token %}
+    <div class="card comment-card" style="width: 85%; margin-top: 15px;">
+        <div class="card-body">
+            <h5>Comment by user</h5>
+            <h6>{{comment.date}}</h6>
+            <hr>
+            <p>{{comment.text_input}}</p>
+        </div>
+    </div>
+    {% endfor %}
 </div>
 {% endblock %}
