--- a/main_app/templates/errors/detail.html
+++ b/main_app/templates/errors/detail.html
@@ -18,6 +18,19 @@
             <input type="submit" value="Submit!" class="btn">
         </form>
         </div>
+        <table class="striped">
+            <thead>
+              <tr><th>Date</th><th>Comment</th></tr>
+            </thead>
+            <tbody>
+              {% for comment in error.comment_set.all %}
+                <tr>
+                  <td>{{comment.text_input}}</td>
+                  <td>{{comment.date}}</td>
+                </tr>
+              {% endfor %}
+            </tbody>
+          </table>
     </div>
 </div>
 {% endblock %}
