--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,7 +15,9 @@
 </head>
 <body>
     <nav>
-        
+        <div class="form-outline">
+            <input type="search" id="form1" class="form-control" placeholder="Type query" aria-label="Search" />
+          </div>
     </nav>
     {% block content %}
     {% endblock %}    
