--- a/main_app/templates/errors/detail.html
+++ b/main_app/templates/errors/detail.html
@@ -8,7 +8,6 @@
         <h6 class="card-subtitle mb-2 text-muted">{{error.language}}</h6>
         <p class="card-text">{{error.description}}</p>
 
-
         <hr>
         <form action="{% url 'add_comment' error.id %}" method="POST">
             {% csrf_token %}
@@ -18,19 +17,18 @@
             <input type="submit" value="Submit!" class="btn">
         </form>
         </div>
-        <table class="striped">
-            <thead>
-              <tr><th>Date</th><th>Comment</th></tr>
-            </thead>
-            <tbody>
-              {% for comment in error.comment_set.all %}
-                <tr>
-                  <td>{{comment.text_input}}</td>
-                  <td>{{comment.date}}</td>
-                </tr>
-              {% endfor %}
-            </tbody>
-          </table>
     </div>
+
+    {% for comment in error.comment_set.all %}
+    {% csrf_token %}
+    <div class="card" style="width: 85%; margin-top: 5px;">
+        <div class="card-body">
+            <h5>Comment by -insert username-</h5>
+            <h6>{{ comment.date }}</h6>
+            <hr>
+            <p>{{ comment.text_input }}</p>
+        </div>
+    </div>
+    {% endfor %}
 </div>
 {% endblock %}
