--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<form class="d-flex p-2" role="search">
-    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+<form class="d-flex p-2" role="search" action="{% url 'search' %}" method="GET">
+    <!-- {% csrf_token %} -->
+    <input class="form-control me-2" type="text" name = "search" placeholder="Search" aria-label="Search">
     <button class="btn btn-outline" type="submit">Search</button>
   </form>
   <hr>
-<div class="container d-flex flex-column align-items-center justify-content-center">
+<div class="container d-flex flex-column align-items-center">
   {% for error in errors %}
   {% csrf_token %}
   <div class="card" style="width: 85%;">
