Add create error

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -30,6 +30,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'index' %}">My Errors</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'error_create' %}">Add Error</a>
+              </li>
               {% endif %}
             </ul>
           </div>
