--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -2,8 +2,8 @@
 {% block content %}
 
 <body class="login-colors">
-    <div class="container d-flex flex-column align-items-center justify-content-center align-middle">
-        <div class=" text-center login-colors">
+    <div class="login-container d-flex flex-column align-items-center justify-content-center align-middle">
+        <div class="text-center login-colors">
             <div class="card-body">
                 <div class="row title"><h1>Log In</h1></div>
                 <br>
