--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -1,5 +1,5 @@
-.login-colors {
-    background-color: #2c5331;
+.login-colors, .add-colors {
+    background-color: #2c3531;
     color: #ffcb9a
 }
 
@@ -8,7 +8,7 @@ h1 {
 }
 
 .login-btn-colors {
-    background-color: #2c5331;
+    background-color: #2c3531;
     color: #ffcb9a
 }
 
@@ -16,8 +16,9 @@ body {
     height: 100vh;
   }
   
-.container {
+.login-container, .add-container {
     height:100%;
+    margin-top: 40px;
 }
 
 body {
