--- a/main_app/templates/main_app/error_form.html
+++ b/main_app/templates/main_app/error_form.html
@@ -1,5 +1,19 @@
 {% extends 'base.html' %}
-
 {% block content %}
+
+<div class="add-colors add-container d-flex flex-column align-items-center justify-content-center">
+    <div class="card-body">
+        {% if object %}
+        <h1>Edit {{ object.name }}</h1>
+        {% else %}
+        <h1>Add an error</h1>
+        {% endif %}
+        <form action="" method="POST">
+            {% csrf_token %}
+            {{ form.as_p}}
+            <input type="submit" value="SUBMIT" class="btn">
+        </form>
+    </div>
+</div>
 
 {% endblock %}
