--- a/main_app/templates/registration/signup.html
+++ b/main_app/templates/registration/signup.html
@@ -2,8 +2,7 @@
 {% block content %}
 
 <body class="login-colors">
-    <div class="container d-flex flex-column align-items-center justify-content-center">
-        <div class="login-colors">
+    <div class="login-container d-flex flex-column align-items-center justify-content-center">
             <div class="card-body">
                 <div class="row title"><h1>Sign Up</h1></div>
                 {% if error_message %}<p class="text-danger">{{ error_message }}</p>{% endif %}
@@ -14,8 +13,6 @@
                     <input type="hidden" name="next" value="{{ next }}">
                 </form>
             </div>
-        </div>
-        
     </div>
 </body>
 
