--- a/main_app/templates/main_app/error_confirm_delete.html
+++ b/main_app/templates/main_app/error_confirm_delete.html
@@ -1,5 +1,17 @@
 {% extends 'base.html' %}
-
 {% block content %}
+<div class="add-colors add-container d-flex flex-column align-items-center justify-content-center">
+    <div class="card-body">
+        <h1>Delete Error</h1>
+        
+        <h4>Are you sure you want to delete {{ object.name }}</span>?</h4>
+        
+        <form action="" method="POST">
+          {% csrf_token %}
+          <input type="submit" value="Yes - Delete" class="btn">
+          <a href="{% url 'index' user.id %}" class="btn">Cancel</a>
+        </form>
+    </div>
+</div>
 
 {% endblock %}
