--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -7,6 +7,13 @@ h1 {
     color: #d9b08c;
 }
 
+h4 {
+    color: #d1e8e2;
+}
+
+a {
+    text-decoration: none;
+}
 .login-btn-colors {
     background-color: #2c3531;
     color: #ffcb9a
@@ -67,4 +74,9 @@ body {
 
 .comment-box {
     display: block;
+}
+
+.challenge-card {
+    margin: 3px;
+    height: 175px;
 }
