--- a/main_app/templates/challenges/detail.html
+++ b/main_app/templates/challenges/detail.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container d-flex flex-column align-items-center justify-content-center">
 
-    <div class="card" style="width: 80%">
+    <div class="card" style="width: 80%; margin-top: 15px;">
         <div class="card-body">
             <div class="card-title">{{ problem.title }}</div>
             <div class="card-subtitle">{{ problem.problem }}</div>
