--- a/main_app/templates/challenges/index.html
+++ b/main_app/templates/challenges/index.html
@@ -4,17 +4,19 @@
 <div class="container d-flex flex-column align-items-center">
     <h1>Coding Challenges</h1>
     <h4>Checkout the different challenges below to help sharpen your coding abilities!</h4>
-
-    {% for problem in problems%}
-    {% csrf_token %}
-    <a href="{% url 'challenge_detail' problem.id %}">
-        <div class="card" style="width: 20%;">
-            <div class="card-body">
-                <div class="card-title">{{ problem.title }}</div>
-                <div class="card-subtitle">{{ problem.problem }}</div>
-            </div>
+    <div class="container flex-row">
+        {% for problem in problems%}
+        {% csrf_token %}
+        <div class="card challenge-card d-inline-flex" style="width: 30%;">
+            <a href="{% url 'challenge_detail' problem.id %}">
+                <div class="card-body">
+                    <div class="card-title">{{ problem.problem }}</div>
+                    <div class="card-subtitle">{{ problem.title }}</div>
+                </div>
+            </a>
         </div>
-    </a>
-    {% endfor %}
+        {% endfor %}
+        
+    </div>
 </div>
 {% endblock %}
