--- a/main_app/templates/errors/detail.html
+++ b/main_app/templates/errors/detail.html
@@ -7,10 +7,12 @@
         <h5 class="card-title">{{error.title}}</h5>
         <h6 class="card-subtitle mb-2 text-muted">{{error.language}}</h6>
         <p class="card-text">{{error.description}}</p>
+        {% if error.user == user %}
         <div class="card-action">
             <a href="{% url 'error_update' error.id %}" class="btn">Edit</a>
             <a href="{% url 'error_delete' error.id %}" class="btn">Delete</a>
         </div>
+        {% endif %}
         <hr>
         <form action="{% url 'add_comment' error.id %}" method="POST">
             {% csrf_token %}
