--- a/main_app/templates/main_app/error_confirm_delete.html
+++ b/main_app/templates/main_app/error_confirm_delete.html
@@ -9,7 +9,7 @@
         <form action="" method="POST">
           {% csrf_token %}
           <input type="submit" value="Yes - Delete" class="btn">
-          <a href="{% url 'index' %}" class="btn">Cancel</a>
+          <a href="{% url 'error_detail' error.id %}" class="btn">Cancel</a>
         </form>
     </div>
 </div>
