--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -43,6 +43,9 @@
             <ul class="navbar-nav">
               {% if user.is_authenticated %}
               <li class="nav-item">
+                <a class="nav-link" href="{% url 'user_profile' %}">My Profile</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link " href="{% url 'logout' %}">Log Out</a>
               </li>
               {% else %}
