--- a/main_app/templates/user/detail.html
+++ b/main_app/templates/user/detail.html
@@ -1,5 +1,18 @@
 {% extends 'base.html' %}
-
 {% block content %}
+
+<body class="login-colors">
+    <div class="login-container d-flex flex-column align-items-center justify-content-center">
+            <div class="card-body">
+                <div class="row title"><h1>User Profile</h1></div>
+                <form method="post" action="" class="text-decoration-none">
+                    {% csrf_token %}
+                    {{ update_form.as_p }}
+                    <input type="submit" class="btn btn-outline" value="Submit">
+                    <input type="hidden" name="next" value="{{ next }}">
+                </form>
+            </div>
+    </div>
+</body>
 
 {% endblock %}
