photo upload and detail page edits

--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -80,3 +80,10 @@ body {
     margin: 3px;
     height: 175px;
 }
+
+.img-files {
+    width: 100px;
+    height: 100px;
+    display: inline;
+    margin: 3px;
+}
