--- a/main_app/templates/errors/search_results.html
+++ b/main_app/templates/errors/search_results.html
@@ -6,14 +6,21 @@
     <hr>
     {% for error in errors %}
     {% csrf_token %}
-    <div class="card" style="width: 85%;">
-        <a href="{% url 'error_detail' error.id %}">
-            <div class="card-title"> {{ error.title }}</div>
-            <div class="card-subtitle"> {{ error.language }}</div>
-            <hr>
-            <div class="card-text">{{ error.description }}</div>
+    <div class="card" style="width: 85%; margin-top: 5px;">
+        <a href="{% url 'error_detail' error.id %}" class="text-decoration-none text-black">
+        <div class="card-body">
+          <h5 class="card-title">{{ error.title }}</h5>
+          <h6 class="card-subtitle mb-2">Language: {{ error.language }} - User: {{ error.user }}</h6>
+          <p class="card-text">{{ error.description }}</p>
+          <p class="card-text">{{ error.date }}</p>
+          {% if error.solution %}
+          <p class="card-text solved">Solved</p>
+          {% else %}
+          <p class="card-text unsolved">Unsolved</p>
+          {% endif %}
+        </div>
         </a>
-    </div>
+      </div>
     {% endfor %}
 </div>
 {% endblock %}
