--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -82,8 +82,8 @@ body {
 }
 
 .img-files {
-    width: 100px;
-    height: 100px;
+    width: 750px;
+    height: auto;
     display: inline;
     margin: 3px;
 }
