--- a/main_app/templates/errors/detail.html
+++ b/main_app/templates/errors/detail.html
@@ -29,9 +29,8 @@
         {% else %}
 
         {% endif %}
-
         {% for screenshot in error.screenshot_set.all %}
-        <img src="{{screenshot.url}}" alt="screenshot" class="img-files">   
+        <img src="{{screenshot.url}}" alt="screenshot" class="img-files">
         {% endfor %}
         <hr>
         <form action="{% url 'add_comment' error.id %}" method="POST">
@@ -58,5 +57,28 @@
     </div>
     {% endfor %}
 </div>
+<div id="myModal" class="modal">
+    <span class="close">&times;</span>
+    <img class="modal-content" id="img01">
+    <div id="caption"></div>
+</div> 
+  <script>
+    var modal = document.getElementById("myModal");
+    var img = document.querySelectorAll(".img-files");
+    var modalImg = document.getElementById("img01");
+    var captionText = document.getElementById("caption");
+    img.forEach(function(click){
+      click.addEventListener("click",popUp)
+    })
+    function popUp (){
+      modal.style.display = "block";
+      modalImg.src = this.src;
+      captionText.innerHTML = this.alt;
+    }
+    var span = document.getElementsByClassName("close")[0];
 
+    span.onclick = function() {
+      modal.style.display = "none";
+    } 
+  </script>
 {% endblock %}
